--- a/aurelius/NAMESPACE
+++ b/aurelius/NAMESPACE
@@ -87,4 +87,5 @@ importFrom(stats,coef)
 importFrom(stats,gaussian)
 importFrom(stats,setNames)
 importFrom(utils,capture.output)
+importFrom(utils,head)
 importFrom(utils,tail)
