--- a/aurelius/.Rbuildignore
+++ b/aurelius/.Rbuildignore
@@ -3,12 +3,12 @@
 ^.*\.Rhistory$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^README\.Rmd$  
 ^README-.*\.png$
 ^NEWS\.md$          
 ^CONTRIBUTING\.md$
-^cran-comments\.md$ 
 ^\.travis\.yml$
-^\.codecov\.yml$
 ^.git$
 ^internal$
+codecov.yml
+cran-comments.md
+README.Rmd
