Text Explicit Install of lme4 package
Test explicitly calling for the install of lme4 to help get nloptr installed without error.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ r_binary_packages:
 r_packages:
 - covr
 - devtools
+- lme4
 - jsonlite
 - gbm
 - glmnet
@@ -58,12 +59,6 @@ services:
 
 #before_install
 before_install:
-- git clone git://github.com/stevengj/nlopt
-- cd nlopt
-- cmake .
-- make
-- sudo make install
-- cd ..
 - sudo apt-get install python-setuptools -y
 - sudo pip install numpy
 - cd titus
