--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: aurelius
 Type: Package
-Version: 0.8.4.9000
+Version: 0.8.4
 Date: 2017-06-30
 Title: Generates PFA Documents from R Code and Optionally Runs Them
 Description: Converts R syntax into PFA and provides tools for assembling a PFA
@@ -20,10 +20,11 @@ Imports:
     methods,
     stats,
     utils,
-    rPython (>= 0.0-6),
     jsonlite (>= 1.1),
     gbm (>= 2.1.1),
     glmnet (>= 2.0-5)
+Enhances: 
+    rPython
 Suggests:
     knitr,
     rmarkdown,
