--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: aurelius
 Type: Package
 Version: 0.8.4
-Date: 2017-06-30
+Date: 2017-07-02
 Title: Generates PFA Documents from R Code and Optionally Runs Them
-Description: Converts R syntax into PFA and provides tools for assembling a PFA
-    document within R. Tests validity and runtime behavior of PFA by offloading
-    PFA and data to Titus (through rPython). Facilitates conversion of common R
-    model output to PFA using aurelius.* libraries.
+Description: Provides tools for converting R objects and syntax into the Portable 
+    Format for Analytics (PFA). Allows for testing validity and runtime behavior 
+    of PFA documents through rPython and Titus, a more complete implementation of 
+    PFA for Python. The Portable Format for Analytics (PFA) is a specification for 
+    event-based processors that perform predictive or analytic calculations and is aimed 
+    at helping smooth the transition from statistical model development to large-scale 
+    and/or online production. See more at http://dmg.org/pfa.
 Authors@R: c(
   person("Steven", "Mortimer", , "reportmort@gmail.com", c("aut", "cre")), 
   person("Collin", "Bennett", , "collin.bennett@opendatagroup.com", c("aut")),
