--- a/aurelius/DESCRIPTION
+++ b/aurelius/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Provides tools for converting R objects and syntax into the Portabl
     PFA for Python. The Portable Format for Analytics (PFA) is a specification for 
     event-based processors that perform predictive or analytic calculations and is aimed 
     at helping smooth the transition from statistical model development to large-scale 
-    and/or online production. See more at http://dmg.org/pfa.
+    and/or online production. See <http://dmg.org/pfa> for more information.
 Authors@R: c(
   person("Steven", "Mortimer", , "reportmort@gmail.com", c("aut", "cre")), 
   person("Collin", "Bennett", , "collin.bennett@opendatagroup.com", c("aut")),
